--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body{
 }
 .link{
     text-decoration:underline;
+    float: right;
 }
 .italics{
     font-style: italic;
@@ -30,4 +31,92 @@ height: 300px;
 width:60%;
 border:6px solid rgb(28,28,79);
 padding:40px;
+float: right;
+}
+.container{
+    background-color: rgb(250,250,250);
+    margin: 10px;
+    display: flex;
+    height: 300px;
+    flex-direction:row;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+.container-item{
+    background: rgb(36,130,39);
+    color: white;
+    font-size: 25px;
+    margin: 10px;
+    width: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 5px;
+    flex-grow: 1;
+    flex-shrink:1;
+    flex-basis: 100px;
+
+}
+.flexbox{
+    background: wheat;
+    border-radius: 5px;
+    display: flex;
+    height: 300px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+.flexbox-container{
+    background: rgb(177, 64, 64);
+    margin: 5px;
+    line-height: 40px;
+    width:40px;
+    border-radius:5px;
+    text-align: center;
+}
+.grid-container{
+    background: white;
+    border-radius: 5px;
+    height: 300px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+.grid-item{
+    width: 40px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 5px;
+}
+.submit-button{
+    margin:20px 10px;
+    padding:10px 15px;
+    border:none;
+    text-decoration: none;
+    font-family: "lato",sans-serif;
+    font-weight:600;
+    font: size 20px;
+    color:white;
+    border-radius:5px;
+    background: rgb(89,150,255);
+    transition: all 3s ease;
+}
+.submit-button:hover{
+    background: purple;
+    padding: 20px 30px;
+    transform: translate();
+}
+@keyframes red-to-black{
+    0%{background: red;
+       transform: translate(0px 0px);
+    }
+    50%{
+        background: yellow;
+        transform: translate(10px 10px);
+    }
+    100%{
+        background: black;
+        transform: translate(20px 20px);
+    }
 }
